<resources>
    <string name="app_name">BULLTRADE</string>
    <string name="title_home">Wallet</string>
    <string name="title_dashboard">Stock</string>
    <string name="title_notifications">Chat</string>
    <string name="title_profile">Profile</string>
    <string name="user_agreement"><u>User Agreement</u></string>
    <string name="agb" translatable="false"><u>AGB</u></string>
    <string name="create_new_account">Create new account</string>
    <string name="forgot_password">Forgot password</string>
    <string name="registration">Registration</string>
    <string name="phone_number">Phone Number</string>
    <string name="email" translatable="false">Email</string>
    <string name="country">Country</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="password">Password</string>
    <string name="repeat_your_password">Repeat your password</string>
    <string name="next">Next</string>
    <string name="add_a_card">Add a card</string>
    <string name="quantity">Quantity</string>
    <string name="interest_deduction">Interest deduction</string>
    <string name="total">Total</string>
    <string name="buy">BUY</string>
    <string name="sell">SELL</string>
    <string name="bulltrade_card">Bulltrade card</string>
    <string name="advantages_of_the_card_n1_worldwide_pay_with_visa_n2_pay_with_bitcoin_n3_debit_reload_card">Advantages of the card:<br />1. Worldwide pay with Visa<br />2. Pay with Bitcoin<br />3.Debit reload Card</string>
    <string name="order">Order</string>
    <string name="account">Account</string>
    <string name="profile">Profile</string>
    <string name="my_balance">My balance</string>
    <string name="cards">Cards</string>
    <string name="agb1" translatable="false">AGB</string>
    <string name="search_for_friends">Search for friends</string>
    <string name="write_a_message">Write a message</string>
    <string name="bullbank" translatable="false">Bullbank</string>
    <string name="crypto">Crypto</string>
    <string name="trading_assistant">Trading Assistant</string>
    <string name="save_trees_u00a0_breath_of_earth">Save trees - breath of Earth</string>
    <string name="collect_friends_get_money">Collect friends - get Money</string>
    <string name="earn_money">Earn Money</string>
    <string name="bullshop" translatable="false">BullShop</string>
    <string name="wallet">Wallet</string>
    <string name="news">News</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="buy_bullcoin">Buy BullCoin</string>
    <string name="from_0_10">From 0,10 $</string>
    <string name="up_to_3_5">Up to 3.5%</string>
    <string name="connect_a_ready_made_portfolio">Connect a ready-made portfolio</string>
    <string name="free">Free</string>
    <string name="_474_98" translatable="false">474,98$</string>
    <string name="pay_attention">Pay attention</string>
    <string name="exchange_of_currency">Exchange of currency</string>
    <string name="language">Language</string>
    <string name="income">Income</string>
    <string name="expences">Expences</string>
    <string-array name="posts">
        <item>Today good day to invest in some company.</item>
        <item>Russia resumes international flights from three more cities.</item>
        <item>Sample Text</item>
    </string-array>
    <string name="select_a_card">Select a card</string>
    <string name="settings">Settings</string>
    <string name="referral_system">Referral system</string>
    <string name="ideas">Ideas</string>
    <string name="stock">Stock</string>
    <string name="share">Share</string>
    <string name="crypt">Crypt</string>
    <string name="search">Search</string>
    <string name="top_up_your_balance">Top up your balance</string>
    <string name="pay_out">Pay out</string>
    <string name="get_a_detailed_history">Get a detailed history</string>
    <string name="invite_a_friend_and_get_bonuses">Invite a friend and get bonus!</string>
    <string name="you_will_get">You will get:</string>
    <string name="your_friend_will_get">Your friend will get:</string>
    <string name="_100_bullcoin_after_your_friend_deposits_money_to_your_account">100 Bullcoin after your friend deposits 100 Dollar dollars in the account</string>
    <string name="_100_bullcoin_immediately_after_registration">100 BullCoin immediately after registration</string>
    <string name="get_a_link">Get a link</string>
    <string name="_17_45">today at 17:45</string>
    <string name="today_at_17_45">Today at 17:45</string>
    <string name="you_have_bought">You have bought\u00A0</string>
    <string name="you_have_sold">You have sold\u00A0</string>
    <string name="not_enough_money">Not enough money</string>
    <string name="not_enough">Not enough\u00A0</string>
    <string name="create_a_pin">Create a pin</string>
    <string name="repeat">Repeat</string>
    <string name="pins_doesnt_match">Pins doesn\'t match</string>
    <string name="broker_account">Broker account</string>
    <string name="your_balance">Your balance</string>
    <string name="bullcoin" translatable="false">Bullcoin</string>
    <string name="your_bcn_balance">Your BCN balance</string>
    <string name="bullbank_card" translatable="false">Bullbank</string>
    <string name="your_bank_account_balance">Your bank account balance</string>
    <string name="quantity_x">quantity x</string>
    <string name="overview">Overview</string>
    <string name="bidding">Bidding</string>
    <string name="forecasts">Forecasts</string>
    <string name="country1">Country</string>
    <string name="united_states_of_america">United States of America</string>
    <string name="recommendation">Recommendation</string>
    <string name="buy1">Buy</string>
    <string name="predicted_price">Predicted price</string>
    <string name="price_change">Price change</string>
    <string name="keep">Keep</string>
    <string name="Bullcoin_is_a_new_cryptocurrency">Bullcoin is a new cryptocurrency , but despite this, it is rapidly gaining popularity and on our platform you can not only buy it, but also receive an annual percentage of the amount for which you bought the cryptocurrency.</string>
    <string name="Save_the_trees">Our company is very concerned about the environment and now we are holding a campaign and we are going to give part of the income to buy trees , we will take care of nature TOGETHER. <br/> <br/> Save trees - buy Bullcoin!</string>
    <string name="Save_the_trees2">You already save:</string>
    <string name="Save_the_trees3" translatable="false">125</string>
    <string name="collect_friends_get_money_screen">Collect friends - get Money</string>
    <string name="bullfamily" translatable="false">BULLFAMILY</string>
    <string name="friends_text">Collect friends and get bonus for each friend! When a friend makes Invest in App 100 Dollar / euro User become 100 Bullcoin Bonus. 100% = 100 Bullcoin Bonus. Payout with 100 Prozent.</string>
    <string name="your_bullfamily">Your Bullfamily</string>
    <string name="details">Details</string>
    <string name="name">Name</string>
    <string name="your_bonus">Your bonus</string>
    <string name="invate_friend" translatable="false"><b>Invite friend</b><br/>Tell your joy and get 10 € in bitcoin for each new bulltrade</string>
    <string name="crypto_currencies_deposit_new" translatable="false">Crypto-currencies Deposit</string>
    <string name="for_bloked1">For bloked Bullcoin in Deposit for 3 month 1,5 %</string>
    <string name="for_bloked2">For bloked Bullcoin in Deposit for 6 month 2%</string>
    <string name="for_bloked3">And for bloked Bullcoin Deposit for 12 month 3,5%</string>
    <string name="get_a_ready_made_portfolio">Get a ready-made portfolio</string>
    <string name="order_a_call">Order a call</string>
    <string name="help">Help</string>
    <string name="get_recommendations_for_your_portfolio">Get recommendations for your portfolio</string>
    <string name="how_can_i_help_you">How can I help you?</string>
    <string name="bull_trade_net" translatable="false"><u>Bull-trade.net</u></string>
    <string name="save_the_world_grow_up_your_tree">Save the world grow up your tree.</string>
    <string name="buy_bullcoin2">Buy Bullcoin</string>
    <string name="asset_text_apple">Apple Inc. is an American Corporation that produces personal and tablet computers, audio players, phones, and software.it owns the Apple Pay payment service. A 7-to-1 split of the shares allowed them to join the Dow Jones index in March 2015. The company has a generous policy towards its shareholders: in addition to paying dividends, buyback programs are also regularly implemented.</string>
    <string name="asset_text_bilibili">Bilibili is a video sharing website dedicated to animation, comics, and games based in China, where users can send, view, and add comments to the subtitles of the videos.</string>
    <string name="asset_text_gazprom">Gazprom is the largest gas company in the world, holding a leading position in the market of gas production, transportation and sales in Russia and abroad. The main sales market of the company is the Russian Federation. The second place is occupied by Europe, which accounts for about a third of the total volume of deliveries. The company is also engaged in oil production and refining. Gazprom\'s main shareholder is the state, and its share in the holding\'s share capital is 50.2%. At the moment, it is the largest Russian company by market capitalization.</string>
    <string name="asset_text_vtb">VTB is the second largest Russian commercial bank by assets after Sberbank.It was founded in 1990 as the Bank for Foreign Trade, abbreviated as Vneshtorgbank. After the transformation of Vneshtorgbank into an open joint stock company in 1998, almost all the shares (96.8 %) of the credit institution belonged to the state represented by the Central Bank, but four years later the shares were transferred to the Federal Agency for State Property Management.</string>
    <string name="asset_text_lukoil">LUKOIL is one of the world\'s largest private oil and gas companies. LUKOIL\'s main areas of activity are oil and gas production and processing. Most of the company\'s hydrocarbon reserves are located in the fields in Western Siberia. LUKOIL plays a leading role in the global market for the production of petroleum products and petrochemicals, supplying its products to 27 countries around the world. In addition, the company has oil refineries and a network of gas stations in Russia and the United States.</string>
    <string name="asset_text_evras">Evraz plc (Evraz, Evraz Group) is an international vertically integrated metallurgical and mining company with assets in the Russian Federation, the United States, Canada, the Czech Republic, Italy, and Kazakhstan. Its headquarters are in London. It is one of the largest steel producers in the world. Its own base of iron ore and coking coal almost completely meets the internal needs of EVRAZ. The company is included in the leading index of the London Stock Exchange FTSE-100. EVRAZ unites about 80,000 employees worldwide.</string>
    <string name="asset_text_bullcoin">Bulltrade ltd. is an Company in London England, created Bulltrade APP and BULLCOIN BCN for a new generation of trader. More fun and more features for user. BULLCOIN is a new currency on market of crypto with potential of high performance!</string>
    <string name="asset_text_bitcoin">Bitcoin, or bitcoin (from the English Bitcoin, from bit-bit and coin-coin) — is a peer-to-peer payment system that uses the unit of the same name to account for transactions. Cryptographic methods are used to ensure the functioning and protection of the system, but all information about transactions between the addresses of the system is available in plain text.</string>
</resources>