<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.bullcoin.app.navigation.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_selectCardFragment"
            app:destination="@id/selectCardFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_stock"
        android:name="com.bullcoin.app.navigation.stock.StockFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_stock" />

    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.bullcoin.app.navigation.chat.ChatFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_chat" >
        <action
            android:id="@+id/action_navigation_chat_to_chatDialogueFragment2"
            app:destination="@id/chatDialogueFragment2" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.bullcoin.app.navigation.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_navigation_profile_to_settingsFragment"
            app:destination="@id/settingsFragment" />
    </fragment>
    <fragment
        android:id="@+id/chatDialogueFragment2"
        android:name="com.bullcoin.app.navigation.chat.ChatDialogueFragment"
        android:label="ChatDialogueFragment" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.bullcoin.app.navigation.profile.SettingsFragment"
        android:label="SettingsFragment" >
        <action
            android:id="@+id/action_settingsFragment_to_languageFragment"
            app:destination="@id/languageFragment" />
    </fragment>
    <fragment
        android:id="@+id/languageFragment"
        android:name="com.bullcoin.app.navigation.profile.LanguageFragment"
        android:label="LanguageFragment" />
    <fragment
        android:id="@+id/selectCardFragment"
        android:name="com.bullcoin.app.cards.SelectCardFragment"
        android:label="SelectCardFragment" >
        <action
            android:id="@+id/action_selectCardFragment_to_addCardFragment"
            app:destination="@id/addCardFragment" />
        <action
            android:id="@+id/action_selectCardFragment_to_cardMenuFragment"
            app:destination="@id/cardMenuFragment" />
    </fragment>
    <fragment
        android:id="@+id/addCardFragment"
        android:name="com.bullcoin.app.cards.AddCardFragment"
        android:label="AddCardFragment" >
        <action
            android:id="@+id/action_addCardFragment_to_bullcardFragment"
            app:destination="@id/bullcardFragment" />
    </fragment>
    <fragment
        android:id="@+id/bullcardFragment"
        android:name="com.bullcoin.app.cards.BullcardFragment"
        android:label="BullcardFragment" >
        <action
            android:id="@+id/action_bullcardFragment_to_selectCardFragment2"
            app:destination="@id/selectCardFragment" />
    </fragment>
    <fragment
        android:id="@+id/cardMenuFragment"
        android:name="com.bullcoin.app.cards.CardMenuFragment"
        android:label="CardMenuFragment" />
</navigation>